--- a/Appliances_Energy_Prediction_Regression/AEP_test_2.ipynb
+++ b/Appliances_Energy_Prediction_Regression/AEP_test_2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dated-blackjack",
+   "id": "forty-wireless",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "exotic-artwork",
+   "id": "published-crystal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "convertible-newfoundland",
+   "id": "conventional-moscow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "photographic-tension",
+   "id": "seven-croatia",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "chief-incident",
+   "id": "ordered-mainstream",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "final-monaco",
+   "id": "ranking-flash",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "choice-cache",
+   "id": "abstract-protection",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "eligible-maple",
+   "id": "featured-recorder",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "after-voluntary",
+   "id": "incredible-tobago",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "opened-german",
+   "id": "searching-capability",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "perceived-colon",
+   "id": "graduate-nancy",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "closing-standing",
+   "id": "further-checklist",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bronze-guess",
+   "id": "banned-people",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "narrative-holmes",
+   "id": "careful-specialist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "expanded-hobby",
+   "id": "criminal-functionality",
    "metadata": {},
    "outputs": [
     {
@@ -588,8 +588,8 @@
      "data": {
       "text/plain": [
        "RandomizedSearchCV(cv=3, estimator=SVR(), n_iter=30, n_jobs=6,\n",
-       "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f81df4c5ad0>,\n",
-       "                                        'gamma': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f81df4c5a10>},\n",
+       "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f86eee6aad0>,\n",
+       "                                        'gamma': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f86eee6a310>},\n",
        "                   random_state=2, verbose=5)"
       ]
      },
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ordinary-complement",
+   "id": "referenced-nerve",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "chicken-township",
+   "id": "tough-language",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "present-stock",
+   "id": "behind-morgan",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "incoming-hacker",
+   "id": "opposite-communist",
    "metadata": {},
    "outputs": [
     {
@@ -701,16 +701,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "essential-official",
+   "execution_count": 20,
+   "id": "working-istanbul",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 30 candidates, totalling 90 fits\n"
+      "Fitting 3 folds for each of 10 candidates, totalling 30 fits\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=3, estimator=SVR(coef0=1, kernel='poly'), n_jobs=6,\n",
+       "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f86ef5bfe90>,\n",
+       "                                        'gamma': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f87b7fd2450>},\n",
+       "                   random_state=2, verbose=5)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -722,26 +735,46 @@
     "from scipy.stats import reciprocal, uniform\n",
     "\n",
     "poly_param_distributions = {\"gamma\": reciprocal(0.001, 1.0), \"C\": uniform(1, 10)}\n",
-    "poly_rnd_search_cv = RandomizedSearchCV(SVR(kernel='poly', degree=3, coef0=1), poly_param_distributions, n_iter=30, n_jobs=6, verbose=5, cv=3, random_state=2)\n",
+    "poly_rnd_search_cv = RandomizedSearchCV(SVR(kernel='poly', degree=3, coef0=1), poly_param_distributions, n_iter=10, n_jobs=6, verbose=5, cv=3, random_state=2)\n",
     "poly_rnd_search_cv.fit(X_train_scaled, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "accompanied-heart",
+   "execution_count": 21,
+   "id": "departmental-ebony",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVR(C=2.844398656469153, coef0=1, gamma=0.22698933025637727, kernel='poly')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poly_rnd_search_cv.best_estimator_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "hearing-commitment",
+   "execution_count": 22,
+   "id": "gentle-lightweight",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set R^2 score:  0.30789910771613627\n",
+      "Test set R^2 score:  0.2546722827162372\n"
+     ]
+    }
+   ],
    "source": [
     "# R^2 values for train and test sets\n",
     "\n",
@@ -751,10 +784,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "linear-sudan",
+   "execution_count": 23,
+   "id": "turned-bulgarian",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set mse:  7328.63488333545\n",
+      "Test set mse:  6717.7297639763065\n"
+     ]
+    }
+   ],
    "source": [
     "# Mean Squared Errors of train and test sets\n",
     "\n",
@@ -764,16 +806,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "beginning-writer",
+   "execution_count": 24,
+   "id": "micro-recommendation",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set mae:  33.97802363970167\n",
+      "Test set mae:  34.90398855233448\n"
+     ]
+    }
+   ],
    "source": [
     "# Mean Absolute Errors of train and test sets\n",
     "\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "print(\"Train set mae: \", mean_absolute_error(y_train, poly_rnd_search_cv.best_estimator_.predict(X_train_scaled)))\n",
     "print(\"Test set mae: \", mean_absolute_error(y_test, poly_rnd_search_cv.best_estimator_.predict(X_test_scaled)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "charged-playback",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 5 candidates, totalling 15 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=3, estimator=SVR(coef0=1, degree=5, kernel='poly'),\n",
+       "                   n_iter=5, n_jobs=6,\n",
+       "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f87b7e93910>,\n",
+       "                                        'gamma': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f87b7e93810>},\n",
+       "                   random_state=2, verbose=5)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Model 3\n",
+    "# Sklearn SVR model with 5th order polynomial kernel\n",
+    "\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import reciprocal, uniform\n",
+    "\n",
+    "poly_5_param_distributions = {\"gamma\": reciprocal(0.001, 1.0), \"C\": uniform(1, 10)}\n",
+    "poly_5_rnd_search_cv = RandomizedSearchCV(SVR(kernel='poly', degree=7, coef0=1), poly_5_param_distributions, n_iter=5, n_jobs=6, verbose=5, cv=3, random_state=2)\n",
+    "poly_5_rnd_search_cv.fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "conscious-restriction",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVR(C=3.046486340378425, coef0=1, degree=5, gamma=0.07207968815585897,\n",
+       "    kernel='poly')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly_5_rnd_search_cv.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "funded-contractor",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set R^2 score:  0.4258724771426182\n",
+      "Test set R^2 score:  0.3020110390896822\n"
+     ]
+    }
+   ],
+   "source": [
+    "# R^2 values for train and test sets\n",
+    "\n",
+    "print(\"Train set R^2 score: \", poly_5_rnd_search_cv.best_estimator_.score(X_train_scaled, y_train))\n",
+    "print(\"Test set R^2 score: \", poly_5_rnd_search_cv.best_estimator_.score(X_test_scaled, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "finnish-relaxation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 5 candidates, totalling 15 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=3, estimator=SVR(coef0=1, degree=7, kernel='poly'),\n",
+       "                   n_iter=5, n_jobs=6,\n",
+       "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f87b7e93910>,\n",
+       "                                        'gamma': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f87b7e93810>},\n",
+       "                   random_state=2, verbose=5)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Model 4\n",
+    "# Sklearn SVR model with 7th order polynomial kernel\n",
+    "\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import reciprocal, uniform\n",
+    "\n",
+    "poly_7_param_distributions = {\"gamma\": reciprocal(0.001, 1.0), \"C\": uniform(1, 10)}\n",
+    "poly_7_rnd_search_cv = RandomizedSearchCV(SVR(kernel='poly', degree=7, coef0=1), poly_5_param_distributions, n_iter=5, n_jobs=6, verbose=5, cv=3, random_state=2)\n",
+    "poly_7_rnd_search_cv.fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "decreased-condition",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVR(C=6.496624778787091, coef0=1, degree=7, gamma=0.02022866293198756,\n",
+       "    kernel='poly')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly_7_rnd_search_cv.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "indoor-humidity",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set R^2 score:  0.2873208327379382\n",
+      "Test set R^2 score:  0.22623303870639755\n"
+     ]
+    }
+   ],
+   "source": [
+    "# R^2 values for train and test sets\n",
+    "\n",
+    "print(\"Train set R^2 score: \", poly_7_rnd_search_cv.best_estimator_.score(X_train_scaled, y_train))\n",
+    "print(\"Test set R^2 score: \", poly_7_rnd_search_cv.best_estimator_.score(X_test_scaled, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "corrected-preserve",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# It turns out polynomial kernel model with degree 5 is a better model than linear svr, rbf model and polynomial kernel with other degrees with the specified set of parameters"
    ]
   }
  ],
