Support Vector Machine Regression Model

--- a/Auto_MPG_Regression/AMPG_test_2.ipynb
+++ b/Auto_MPG_Regression/AMPG_test_2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "prostate-wells",
+   "id": "historic-qatar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "asian-fantasy",
+   "id": "sunset-lesbian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "scheduled-jackson",
+   "id": "former-mandate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "short-classroom",
+   "id": "advisory-legislation",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "engaging-claim",
+   "id": "featured-orbit",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "specific-reasoning",
+   "id": "sealed-stanley",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "several-shipping",
+   "id": "abroad-ivory",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "clean-private",
+   "id": "disabled-arena",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "black-cotton",
+   "id": "temporal-grace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "experimental-baking",
+   "id": "documentary-brisbane",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "marine-torture",
+   "id": "collective-trance",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "postal-thought",
+   "id": "found-litigation",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bored-patent",
+   "id": "conditional-edmonton",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "confident-valley",
+   "id": "southern-assembly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "theoretical-pasta",
+   "id": "original-worcester",
    "metadata": {},
    "outputs": [
     {
@@ -442,8 +442,8 @@
      "data": {
       "text/plain": [
        "RandomizedSearchCV(cv=3, estimator=SVR(), n_iter=30, n_jobs=6,\n",
-       "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f6d1aa89450>,\n",
-       "                                        'gamma': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f6d1ac0c510>},\n",
+       "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f24765e5c10>,\n",
+       "                                        'gamma': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f24765e5a10>},\n",
        "                   random_state=2, verbose=5)"
       ]
      },
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ordered-field",
+   "id": "handled-bronze",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "southeast-saying",
+   "id": "guided-watershed",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "compact-constitution",
+   "id": "concerned-moment",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "important-cowboy",
+   "id": "angry-sample",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "voluntary-belief",
+   "id": "round-singapore",
    "metadata": {},
    "outputs": [
     {
@@ -570,8 +570,8 @@
      "data": {
       "text/plain": [
        "RandomizedSearchCV(cv=3, estimator=SVR(coef0=1, kernel='poly'), n_jobs=6,\n",
-       "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f6de5e2ffd0>,\n",
-       "                                        'gamma': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f6de5e2fc50>},\n",
+       "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f253ff80ad0>,\n",
+       "                                        'gamma': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f253ff94b50>},\n",
        "                   random_state=2, verbose=5)"
       ]
      },
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fluid-transmission",
+   "id": "unlikely-bedroom",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "vanilla-confirmation",
+   "id": "overhead-insight",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "inclusive-services",
+   "id": "driven-antigua",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "conservative-stadium",
+   "id": "alpha-winter",
    "metadata": {},
    "outputs": [
     {
@@ -679,6 +679,276 @@
     "from sklearn.metrics import mean_absolute_error\n",
     "print(\"Train set mae: \", mean_absolute_error(y_train, poly_rnd_search_cv.best_estimator_.predict(X_train_scaled)))\n",
     "print(\"Test set mae: \", mean_absolute_error(y_test, poly_rnd_search_cv.best_estimator_.predict(X_test_scaled)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "employed-whole",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 10 candidates, totalling 30 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=3, estimator=SVR(coef0=1, degree=5, kernel='poly'),\n",
+       "                   n_jobs=6,\n",
+       "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f253ff9d410>,\n",
+       "                                        'gamma': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f253ff9d0d0>},\n",
+       "                   random_state=2, verbose=5)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Model 4\n",
+    "# Sklearn SVR model with 5th degree polynomial kernel\n",
+    "\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import reciprocal, uniform\n",
+    "\n",
+    "poly_param_distributions = {\"gamma\": reciprocal(0.001, 1.0), \"C\": uniform(1, 10)}\n",
+    "poly_5_rnd_search_cv = RandomizedSearchCV(SVR(kernel='poly', degree=5, coef0=1), poly_param_distributions, n_iter=10, n_jobs=6, verbose=5, cv=3, random_state=2)\n",
+    "poly_5_rnd_search_cv.fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "continental-newcastle",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVR(C=7.211338327692949, coef0=1, degree=5, gamma=0.03867464027059847,\n",
+       "    kernel='poly')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly_5_rnd_search_cv.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "velvet-benchmark",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set R^2 score:  0.9060275268202289\n",
+      "Test set R^2 score:  0.8396557462403795\n"
+     ]
+    }
+   ],
+   "source": [
+    "# R^2 values for train and test sets\n",
+    "\n",
+    "print(\"Train set R^2 score: \", poly_5_rnd_search_cv.best_estimator_.score(X_train_scaled, y_train))\n",
+    "print(\"Test set R^2 score: \", poly_5_rnd_search_cv.best_estimator_.score(X_test_scaled, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "current-german",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set mse:  5.695017484898303\n",
+      "Test set mse:  9.88850629287633\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mean Squared Errors of train and test sets\n",
+    "\n",
+    "print(\"Train set mse: \", mean_squared_error(y_train, poly_5_rnd_search_cv.best_estimator_.predict(X_train_scaled)))\n",
+    "print(\"Test set mse: \", mean_squared_error(y_test, poly_5_rnd_search_cv.best_estimator_.predict(X_test_scaled)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ready-offering",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set mae:  1.5653173954659152\n",
+      "Test set mae:  2.241031857992315\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mean Absolute Errors of train and test sets\n",
+    "\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "print(\"Train set mae: \", mean_absolute_error(y_train, poly_5_rnd_search_cv.best_estimator_.predict(X_train_scaled)))\n",
+    "print(\"Test set mae: \", mean_absolute_error(y_test, poly_5_rnd_search_cv.best_estimator_.predict(X_test_scaled)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "private-atlanta",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 10 candidates, totalling 30 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=3, estimator=SVR(coef0=1, degree=10, kernel='poly'),\n",
+       "                   n_jobs=6,\n",
+       "                   param_distributions={'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f253ffa4150>,\n",
+       "                                        'gamma': <scipy.stats._distn_infrastructure.rv_frozen object at 0x7f253ffa7dd0>},\n",
+       "                   random_state=2, verbose=5)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Model 5\n",
+    "# Sklearn SVR model with 10th degree polynomial kernel\n",
+    "\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import reciprocal, uniform\n",
+    "\n",
+    "poly_param_distributions = {\"gamma\": reciprocal(0.001, 1.0), \"C\": uniform(1, 10)}\n",
+    "poly_10_rnd_search_cv = RandomizedSearchCV(SVR(kernel='poly', degree=10, coef0=1), poly_param_distributions, n_iter=10, n_jobs=6, verbose=5, cv=3, random_state=2)\n",
+    "poly_10_rnd_search_cv.fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "indian-criminal",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVR(C=6.496624778787091, coef0=1, degree=10, gamma=0.02022866293198756,\n",
+       "    kernel='poly')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly_10_rnd_search_cv.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "raised-cemetery",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set R^2 score:  0.9103475001935597\n",
+      "Test set R^2 score:  0.8510121187303933\n"
+     ]
+    }
+   ],
+   "source": [
+    "# R^2 values for train and test sets\n",
+    "\n",
+    "print(\"Train set R^2 score: \", poly_10_rnd_search_cv.best_estimator_.score(X_train_scaled, y_train))\n",
+    "print(\"Test set R^2 score: \", poly_10_rnd_search_cv.best_estimator_.score(X_test_scaled, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "latter-provincial",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set mse:  5.433213968794718\n",
+      "Test set mse:  9.188153407140252\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mean Squared Errors of train and test sets\n",
+    "\n",
+    "print(\"Train set mse: \", mean_squared_error(y_train, poly_10_rnd_search_cv.best_estimator_.predict(X_train_scaled)))\n",
+    "print(\"Test set mse: \", mean_squared_error(y_test, poly_10_rnd_search_cv.best_estimator_.predict(X_test_scaled)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "hourly-fifth",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set mae:  1.50041224500904\n",
+      "Test set mae:  2.177710671257231\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mean Absolute Errors of train and test sets\n",
+    "\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "print(\"Train set mae: \", mean_absolute_error(y_train, poly_10_rnd_search_cv.best_estimator_.predict(X_train_scaled)))\n",
+    "print(\"Test set mae: \", mean_absolute_error(y_test, poly_10_rnd_search_cv.best_estimator_.predict(X_test_scaled)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "hollywood-bridges",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For the given dataset polynomial kernel seems to better fit the model than rbf kernel, also higher the degree of polynomial kernel higher the r^2 score"
    ]
   }
  ],
